# Python-R-Scripts

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  CITATION.cff  CLAUDE_PERMISSIONS_SETUP.md  DISCLAIMER.md  GEMINI.md  HANDOVER.md  LICENSE  MCP_SETUP_STATUS.md  Makefile  Policy.md  README.md  README_eFI_content.txt  REPO_CONTEXT.md  R_lukitus.R  SKILLS.md  W1.Cases_per_Patient_Bar_Plot.R  W1.vennd.ipynb  W10.HFRS.4.HFRS_Scores_Risk_Classification.ipynb  W2.Age_Distribution_by_Group_Plot.R  W3.Distribution_of_Patients'_Status.R  W4.Living_Deceased_Distribution.R  W5.Death_Year_Distribution.R  W6.Vennd_Overlap.ipynb  W7.Combine_data.ipynb  W8.HFRS.2.Calculate_HFRS_Points.ipynb  W9.HFRS.3.HFRS_Points_Histogram-n-Boxplot.ipynb  WORKFLOW.md  fof-dissertation-multiroot.code-workspace  layout_short.txt  package-lock.json  (+4 more)
Electronic-Frailty-Index/: .gitignore  .markdownlintignore  README.md  W1.Cases_per_Patient_Bar_Plot.R  W19.Correlation_Analysis_CCI_HFRS.R  W30.LRM.3.Mortality.CCI.HFRS.Adjusted.R  W31.LRM.4.Visualize.Model.R  W5.Death_Year_Distribution.R  W6.Vennd_Overlap.ipynb  W7.Combine_data.ipynb  _quarto.yml  agent_workflow.md  build.ps1  header.tex  make_demo.ps1  pyproject.toml
Fear-of-Falling/: .RData  .dockerignore  .editorconfig  .gitattributes  .gitignore  .lintr  .markdownlint.json  .markdownlintignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKSTART.md  (+33 more)
(+1351 files in other folders)
