[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efi-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas==2.2.2",
  "numpy==1.26.4",
  "matplotlib==3.8.4",
  "typer==0.12.3",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
